--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /[Oo]bj/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
+/[Bb]uild/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
