--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.2d.psdimporter": "6.0.7",
     "com.unity.ai.navigation": "1.1.4",
     "com.unity.cinemachine": "2.9.5",
     "com.unity.collab-proxy": "2.0.5",
